added requestParam "?type" to (/api/transactions)